@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_properties" meta_type="Plone Properties Tool">
+ <object name="site_properties" meta_type="Plone Property Sheet">
+  <property name="atcb_additional_separators" type="lines">
+   <element value=","/>
+  </property>
+ </object>
+</object>
